--- a/templates/etudiant/index.html.twig
+++ b/templates/etudiant/index.html.twig
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+{# templates/index.html.twig #}
 
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+{% extends 'layout.html.twig' %}
+
+{% block title %}
+    Page d'accueil
+{% endblock %}
+
+{% block body %}
+    <h2>Bienvenue sur la page d’accueil</h2>
+    <p>Contenu principal du site.</p>
+
+    {% include 'etudiant/list.html.twig' %}
+{% endblock %}
